tests/baselines/reference/topLevelAwait(module=system,target=es2015).errors.txt
tests/cases/conformance/externalModules/topLevelAwait.ts(2,1): error TS1361: 'await' outside of an async function is only allowed at the top level of a module when '--module' is 'esnext' or 'system' and '--target' is 'es2017' or higher.


==== tests/cases/conformance/externalModules/topLevelAwait.ts (1 errors) ====
    export const x = 1;
    await x;
    ~~~~~
!!! error TS1361: 'await' outside of an async function is only allowed at the top level of a module when '--module' is 'esnext' or 'system' and '--target' is 'es2017' or higher.
    